--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">FreeOTP</string>
+    <string name="app_name">Arbi OTP</string>
     <string name="invalid_token">The token specified was invalid!</string>
     <string name="delete">Delete</string>
     <string name="edit">Edit</string>
@@ -17,15 +17,15 @@
     <string name="save">Save</string>
     <string name="code_copied">Code copied to clipboard.</string>
 
-    <string name="about_freeotp">About FreeOTP</string>
-    <string name="about_version">FreeOTP Version %1$s (%2$d)</string>
+    <string name="about_freeotp">About Arbi OTP</string>
+    <string name="about_version">Arbi OTP Version %1$s (%2$d)</string>
     <string name="about_copyright">© 2013 - Red Hat, Inc., et al.</string>
-    <string name="about_license">FreeOTP is licensed under %1$s.</string>
+    <string name="about_license">Arbi OTP is licensed under %1$s.</string>
     <string name="about_website">For more information, see our %s.</string>
     <string name="about_icons">Some icons used by this application are reproduced from work created and shared by the Android Open Source Project and used according to terms described in the Creative Commons 2.5 Attribution License.</string>
 
     <string name="link_website">&lt;a href=&quot;http://freeotp.github.io&quot;&gt;website&lt;/a&gt;</string>
-    <string name="link_apache2">&lt;a href=&quot;http://www.apache.org/licenses/LICENSE-2.0.html&quot;&gt;Apache 2.0&lt;/a&gt;</string>
+    <string name="link_apache2"><a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache 2.0</a></string>
 
     <string name="error_camera_open">Error while opening camera!</string>
     <string name="error_permission_camera_open">No permission to open the camera</string>
@@ -40,4 +40,5 @@
         <item>SHA256</item>
         <item>SHA512</item>
     </string-array>
+    <string name="invalid_qr_code">Invalid QR code</string>
 </resources>
